force-app/main/default/objects/ProjDash_Project__c/ProjDash_Project__c.object-meta.xml
<CustomObject>
    <description>ProjDash - This custom object holds all project records used for project dashboard</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>