force-app/main/default/objects/ProjDash_Project__c/fields/Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>Accomplishments__c</fullName>
    <description>Project Accomplishments</description>
    <inlineHelpText>Please enter individual Accomplishments on a separate line</inlineHelpText>
    <label>Accomplishments</label>
    <length>600</length>
    <type>Html</type>
</CustomField>