force-app/main/default/objects/ProjDash_Project__c/fields/Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Items__c</fullName>
    <description>Project Action Items</description>
    <inlineHelpText>Please enter individual Action Items on a separate line</inlineHelpText>
    <label>Action Items</label>
    <length>600</length>
    <type>Html</type>
</CustomField>