force-app/main/default/objects/ProjDash_Project__c/fields/Collaborator__c.field-meta.xml
<CustomField>
    <fullName>Collaborator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collaborator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>