force-app/main/default/objects/ProjDash_Project__c/fields/Description_and_Key_Elements__c.field-meta.xml
<CustomField>
    <fullName>Description_and_Key_Elements__c</fullName>
    <label>Description and Key Elements</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>