force-app/main/default/objects/ProjDash_Project__c/fields/Escalations__c.field-meta.xml
<CustomField>
    <fullName>Escalations__c</fullName>
    <label>Escalations</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>