force-app/main/default/objects/ProjDash_Project__c/fields/Funding_Source_and_Needs__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source_and_Needs__c</fullName>
    <label>Funding Source and Needs</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>