force-app/main/default/objects/ProjDash_Project__c/fields/Key_Project__c.field-meta.xml
<CustomField>
    <fullName>Key_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether or not a Project is  'Top 3' Key Project</description>
    <label>Key Project</label>
    <type>Checkbox</type>
</CustomField>