force-app/main/default/objects/ProjDash_Project__c/fields/Other_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Other_Stakeholders__c</fullName>
    <label>Other Stakeholders</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>