force-app/main/default/objects/ProjDash_Project__c/fields/Pulse_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Pulse_Approved_Date__c</fullName>
    <description>Displays the date of the most recent approved Pulse record on a Project</description>
    <label>Pulse Approved Date</label>
    <type>Date</type>
</CustomField>