force-app/main/default/objects/ProjDash_Project__c/fields/Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Stakeholders__c</fullName>
    <label>Stakeholders</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OMB</fullName>
            </value>
            <value>
                <fullName>NSC</fullName>
            </value>
            <value>
                <fullName>DHS</fullName>
            </value>
            <value>
                <fullName>DNI</fullName>
            </value>
            <value>
                <fullName>DoD</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>NIST</fullName>
            </value>
            <value>
                <fullName>NCCoE</fullName>
            </value>
            <value>
                <fullName>USDS</fullName>
            </value>
            <value>
                <fullName>IRS</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>SSA</fullName>
            </value>
            <value>
                <fullName>DOC</fullName>
            </value>
            <value>
                <fullName>OSTP</fullName>
            </value>
            <value>
                <fullName>NEC</fullName>
            </value>
            <value>
                <fullName>DOE</fullName>
            </value>
            <value>
                <fullName>Federal Civilian Agencies</fullName>
            </value>
            <value>
                <fullName>All Agencies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>