force-app/main/default/objects/ProjDash_Project__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <columns>NAME</columns>
    <columns>Phase__c</columns>
    <columns>Status__c</columns>
    <columns>Key_Project__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Deadline__c</columns>
    <columns>Pulse_Approved_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>